<resources>
    <string name="app_name">Pet Finder</string>
    <string name="username_edit_text">Username</string>
    <string name="fullname_edit_text">Type your name</string>
    <string name="password_edit_text">Password</string>
    <string name="phone_edit_text">Phone Number</string>
    <string name="login_text">Sign in</string>
    <string name="create_account">Create account</string>
    <string name="create">Sign up</string>
    <string name="login_google">Sign in with Google</string>
    <string name="login_facebook">Sign in with Facebook</string>
    <string name="registration">Registration</string>
    <string name="select_a_profile_picture">Select a profile picture</string>
    <string name="profile">Profile</string>
    <string name="new_post">Create new post</string>
    <string name="my_news_feed">My News Feed</string>
    <string name="post_picture">Post picture</string>
    <string name="details">Details</string>
    <string name="last_seen">Last seen:</string>
    <string name="help_text">I want to help</string>
    <string name="already_helping_text">Already helping</string>
    <string name="show_password">Show password</string>
    <string name="reset_password">Reset Password</string>
    <string name="post_details">Post Details</string>
    <string name="share_post">Share</string>
    <string name="contact_post">Contact</string>
    <string name="seen_by">Seen by: </string>
    <string name="people_helping">Helping: </string>
    <string name="dont_have_an_account">Don\'t have an account?</string>
    <string name="signup_info_text">Enter a valid email and a password.\n\nPassword must be at least
        8 characters minimum.</string>
    <string name="skip">Skip</string>
    <string name="save_profile">Save profile</string>
    <string name="edit_picture">Edit picture</string>
    <string name="delete_picture">Delete picture</string>
    <string name="profile_description_hint">Write a short description about yourself</string>
    <string name="contact_information_label">Contact information</string>
    <string name="email_address_hint">Email address</string>
    <string name="my_profile_title">My Profile</string>
    <string name="sign_out_option">Sign out</string>
    <string name="active_since_label">Active since</string>
    <string name="no_posts">Whoa! We\'re short of posts here.
        \nIt seems like we\'ve made a good job!</string>
    <string name="picture_tab_text">Picture</string>
    <string name="details_tab_text">Details</string>
    <string name="location_tab_text">Location</string>
    <string name="from_camera_text">From camera</string>
    <string name="from_gallery_text">From gallery</string>
    <string name="pet_name_hint">Name</string>
    <string name="pet_description">Description</string>
    <string name="pet_name_label">What\'s your pet name?</string>
    <string name="pet_description_label">Feel free and tell us a bit about your pet</string>
    <string name="new_post_next_step">Continue</string>
    <string name="new_post_back_step">Go Back</string>
    <string name="new_post_last_step">Create</string>
    <string name="new_post_location">Location</string>
    <string name="current_location_label">Get current</string>
    <string name="title_activity_maps">Map</string>
    <string name="share_dialog_label_text">You can change this text before sharing it</string>
    <string name="no_internet_label">No internet connection</string>
    <string name="no_internet_message">Sorry, you need an active internet connection to
        use this app properly.</string>
    <string name="exit_dialog_message">Exit</string>
    <string name="post_created_text">Post created successfully</string>
    <string name="close_dialog_text">Close</string>
    <string name="go_back_dialog_text">Go back</string>
    <string name="sure_dialog_text">Sure!</string>
    <string name="generic_share_text">"Please, help me finding %s.\n%s\nLast known location: %s.\nHere's a" +
                        " link to the picture: %s"</string>
    <string name="want_to_help_dialog_msg">Are you sure you want to help finding this pet?</string>
    <string name="dont_want_to_help_dialog_msg">You are about to stop helping this pet.</string>
    <string name="sign_off_dialog_text">Sign me off</string>
    <string name="invalid_email_address">Please enter a valid email address</string>
    <string name="invalid_password_length">Password length is below 8 characters</string>
</resources>
