<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <EditText
        android:id="@+id/email_edit_text"
        style="@style/LoginEditText"
        android:hint="@string/username_edit_text"
        android:importantForAutofill="no"
        android:inputType="textEmailAddress"
        tools:targetApi="o" />

    <LinearLayout
        android:id="@+id/password_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/password_edit_text"
            style="@style/LoginEditText"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:hint="@string/password_edit_text"
            android:importantForAutofill="no"
            android:inputType="textPassword"
            tools:targetApi="o" />

        <ImageButton
            android:id="@+id/uncover_pwd"
            style="@style/BorderlessButton"
            android:layout_width="30dp"
            android:layout_height="20dp"
            android:layout_gravity="center"
            android:contentDescription="@string/show_password"
            android:src="@drawable/ic_seen"
            android:text="@string/login_text" />
    </LinearLayout>

</LinearLayout>