<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/new_post_image"
        android:layout_width="300dp"
        android:layout_height="300dp"
        android:layout_gravity="center"
        android:contentDescription="@string/post_picture"
        android:src="@drawable/ic_profile" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/open_camera"
            style="@style/InsideContainerButtonBorderless"
            android:drawableTop="@drawable/ic_camera"
            android:text="@string/from_camera_text" />

        <Button
            android:id="@+id/open_gallery"
            style="@style/InsideContainerButtonBorderless"
            android:drawableTop="@drawable/ic_gallery"
            android:text="@string/from_gallery_text" />
    </LinearLayout>
</LinearLayout>