<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/BaseTheme"
    android:layout_height="wrap_content">

    <ScrollView
        android:id="@+id/profile_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/signup_buttons_container">


        <LinearLayout
            style="@style/BaseTheme30"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <FrameLayout
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:layout_gravity="center"
                android:layout_marginBottom="20dp">

                <ImageView
                    android:id="@+id/profile_picture"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:contentDescription="@string/select_a_profile_picture"
                    android:src="@drawable/paw_large" />

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="165dp"
                    android:background="@color/colorAccent">

                    <ImageButton
                        style="@style/BorderlessButton"
                        android:layout_width="50dp"
                        android:layout_height="35dp"
                        android:layout_alignParentStart="true"
                        android:contentDescription="@string/edit_picture"
                        android:src="@drawable/ic_edit" />

                    <ImageButton
                        style="@style/BorderlessButton"
                        android:layout_width="50dp"
                        android:layout_height="35dp"
                        android:layout_alignParentEnd="true"
                        android:contentDescription="@string/edit_picture"
                        android:src="@drawable/ic_cancel" />
                </RelativeLayout>
            </FrameLayout>

            <EditText
                android:id="@+id/signup_name"
                style="@style/TextMainTitle"
                android:hint="@string/fullname_edit_text"
                android:importantForAutofill="no"
                android:inputType="text"
                tools:targetApi="o"
                tools:text="Daniel Santil" />

            <EditText
                android:id="@+id/profile_aboutme"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_marginBottom="10dp"
                android:hint="@string/profile_description_hint"
                android:importantForAutofill="no"
                android:inputType="textMultiLine"
                android:overScrollMode="always"
                android:scrollbarStyle="insideInset"
                android:scrollbars="vertical"
                tools:targetApi="o"
                tools:text="lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum " />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    style="@style/NormalText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:text="@string/contact_information_label"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/profile_phone_number"
                    style="@style/LoginEditText"
                    android:drawableStart="@drawable/ic_phone"
                    android:drawablePadding="10dp"
                    android:hint="@string/phone_edit_text"
                    android:importantForAutofill="no"
                    android:inputType="phone"
                    tools:targetApi="o" />

                <EditText
                    android:id="@+id/profile_email"
                    style="@style/LoginEditText"
                    android:drawableStart="@drawable/ic_mail"
                    android:drawablePadding="10dp"
                    android:hint="@string/email_address_hint"
                    android:importantForAutofill="no"
                    android:inputType="textEmailAddress"
                    tools:targetApi="o"
                    tools:text="daniel.shcf@gmail.com" />

            </LinearLayout>

        </LinearLayout>

    </ScrollView>

    <LinearLayout
        android:id="@+id/signup_buttons_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:gravity="center"
        android:orientation="horizontal">

        <Button
            style="@style/ButtonColored"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="@color/colorAccent"
            android:text="@string/skip" />

        <Button
            style="@style/ButtonColored"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:drawableStart="@drawable/ic_save"
            android:text="@string/save_profile" />

    </LinearLayout>

</RelativeLayout>