<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="15dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="5dp">

        <ImageView
            android:id="@+id/post_picture"
            android:layout_width="120dp"
            android:layout_height="110dp"
            android:background="@drawable/image_border"
            android:contentDescription="@string/post_picture"
            android:cropToPadding="true" />

        <LinearLayout
            android:id="@+id/info_container"
            android:layout_width="match_parent"
            android:layout_height="110dp"
            android:layout_marginStart="5dp"
            android:layout_toStartOf="@id/post_details"
            android:layout_toEndOf="@id/post_picture"
            android:orientation="vertical">

            <TextView
                android:id="@+id/pet_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/dark"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/last_seen_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/last_seen"
                android:textColor="@color/dark"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/last_seen_address"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <ImageButton
            android:id="@+id/post_details"
            style="@style/BorderlessButton"
            android:layout_width="40dp"
            android:layout_height="110dp"
            android:layout_alignTop="@+id/post_picture"
            android:layout_alignParentEnd="true"
            android:layout_centerHorizontal="true"
            android:contentDescription="@string/details"
            android:src="@drawable/ic_right_arrow" />

        <View
            android:id="@+id/horizontal_bar"
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_below="@id/post_picture"
            android:layout_margin="3dp"
            android:background="@color/baseColor" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:layout_below="@id/horizontal_bar">

            <Button
                android:id="@+id/help_button"
                style="@style/BorderlessButton"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_alignParentStart="true"
                android:drawableStart="@drawable/ic_helping"
                android:drawablePadding="5dp"
                android:gravity="bottom"
                android:text="@string/help_text"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/helping_count"
                style="@style/StatsElement"
                android:layout_marginEnd="5dp"
                android:layout_alignParentEnd="true"
                android:drawableStart="@drawable/ic_helping" />

        </RelativeLayout>


    </RelativeLayout>


</android.support.v7.widget.CardView>